--- a/web/checking.html
+++ b/web/checking.html
@@ -12,5 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>another file for revert checking</div>
+        <h2>github rebase merge</h2>
     </body>
 </html>
