added another row

--- a/web/checking.html
+++ b/web/checking.html
@@ -13,5 +13,6 @@ and open the template in the editor.
     <body>
         <div>another file for revert checking</div>
         <h2>github rebase merge</h2>
+        <h3>git revert changes</h3>
     </body>
 </html>
